# youdaonote-pull

./: .env.example  .gitignore  README.md  pull_notes.py  pyproject.toml
core/: public.py  pull_images.py  youDaoNoteApi.py
