[project]
name = "youdaonote-pull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli==1.1.0",
    "markdownify==0.11.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests==2.31.0",
    "win32-setctime==1.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
